# od-mty-2019

./: .gitignore  README.md  Snakefile  pyproject.toml
data/: enoe_clean.csv
data/PIMUS/: Glosario_EODH.xlsx
data/TAZ/: Macrozonas.gpkg  Zonas.gpkg
data/outputs/: taz_assignment.yaml
src/od_mty_2019/: __init__.py  informal_model.py  od_clean.py  od_households.py  od_legs.py  od_map_dest.yaml  od_map_dis.yaml  od_map_dup_idxs.yaml  od_map_id_typos.yaml  od_map_motivos.yaml  od_map_parentesco.yaml  od_people.py  od_trips.py  sector_maps.py  taz.py
