[project]
name = "od-mty-2019"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gonzalo Peraza", email = "gonzalo.peraza@tec.mx" }
]
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "jupyter>=1.1.1",
    "mapclassify>=2.9.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "snakemake>=9.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
